2006-04-01  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/doc_manager.rb (Gem::DocManager::run_rdoc): Changed
	exception handler to print error message if document generation
	fails, but then to continue with the rest of the installation.
	Permission errors still terminate the install because if one
	install fails because of permission problems, chances are that all
	will fail.
	(Gem::DocManager::install_ri): Removed wrapping of exceptions with
	DocumentError.  Most exceptions now don't propagate out of
	run_rdoc.
	(Gem::DocManager::install_rdoc): Removed wrapping of exceptions
	with DocumentError.  Most exceptions now don't propagate out of
	run_rdoc.

2006-02-23  Jim Weirich  <jim@weirichhouse.org>

	* bin/index_gem_repository.rb (MasterIndexBuilder::cleanup): Fixed
	bug where we were trying to read the index file (to compress it)
	before it was closed, often leading to a truncated index file.

Tue Jan 24 16:26:13 2006  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems/config_file.rb
	Luca Pireddu reported a fatal error when permissions on
	.gemrc were too restrictive.  Fixed.

Tue Dec  6 14:51:13 2005  Jim Weirich  <jim@tardis>

	* lib/rubygems/source_index.rb
 	(Gem::SourceIndex::load_specification): Added an untaint call to
 	make the code run in SAFE=1 mode under 1.8.3.
	(Gem::SourceIndex::load_gems_in): Untaint here too.

	* lib/rubygems/installer.rb (Gem::Installer::install): Untaint
 	here too.
	(Gem::Installer::extract_files): Untaint here too.

	* lib/rubygems/custom_require.rb
 	(Gem::GemPathSearcher::matching_file): Untaint here too.

	* test/gemenvironment.rb: Added $SAFE=1 to the test environment to
 	make sure we can run in $SAFE mode.

2005-12-03  Jim Weirich  <jim@tardis>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped version to
	0.8.11.6'

	* lib/rubygems/user_interaction.rb
	(Gem::StreamUI::SimpleProgressReporter::done): Added several new
	progress reporters.

	* lib/rubygems/command.rb